--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">說文解字</string>
     <string name="action_settings">Settings</string>
+    <string name="menu_search">搜索</string>
+    <string name="search_hint">漢字、部首</string>
 </resources>
