--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="menu_search">搜索</string>
     <string name="search_hint">漢字、部首</string>
+    <string name="img_book">說文解字注圖片版</string>
 </resources>
