--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="menu_done">完成</string>
     <string name="hint_word">Word</string>
     <string name="hint_content">Content</string>
+    <string name="hint_pinyin">拼音</string>
 </resources>
